[gd_scene load_steps=20 format=3 uid="uid://f6m42xn1n5sq"]

[ext_resource type="Script" uid="uid://migdxf1tluyi" path="res://cenas/teste_recurso/arrastar.gd" id="1_k3obs"]
[ext_resource type="Texture2D" uid="uid://ctewsuhbavojw" path="res://images/escova/idle.png" id="2_8jqaf"]
[ext_resource type="Texture2D" uid="uid://brcgcj3l84opv" path="res://images/bolha.png" id="3_1028o"]
[ext_resource type="Script" uid="uid://e0svqxba7ol0" path="res://cenas/teste_recurso/dente_area_teste.gd" id="4_okfr5"]
[ext_resource type="Texture2D" uid="uid://cqq2nxhxq1ggu" path="res://images/dente/dead.png" id="5_8jqaf"]
[ext_resource type="Texture2D" uid="uid://e0wn2fgtlp6" path="res://images/dente/feliz.png" id="6_lc2av"]
[ext_resource type="Texture2D" uid="uid://dra373v13gqd3" path="res://images/dente/maismenos.png" id="7_fa60l"]
[ext_resource type="Texture2D" uid="uid://t5w0n0h7gxo7" path="res://images/dente/triste.png" id="8_4ey47"]
[ext_resource type="Texture2D" uid="uid://rvnmy0ufv78i" path="res://images/dente/mancha1.png" id="9_gohil"]
[ext_resource type="Texture2D" uid="uid://d1wrvlmtbiwiq" path="res://images/dente/mancha2.png" id="10_fih2n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vyknu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8jqaf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsf7n"]
size = Vector2(199, 27)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lc2av"]
radius = 13.0
height = 62.0

[sub_resource type="SpriteFrames" id="SpriteFrames_7ugyg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_8jqaf")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_lc2av")
}],
"loop": true,
"name": &"feliz",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_fa60l")
}],
"loop": true,
"name": &"maismenos",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_4ey47")
}],
"loop": true,
"name": &"triste",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_gohil")
}],
"loop": true,
"name": &"tristre_manchado1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_fih2n")
}],
"loop": true,
"name": &"tristre_manchado2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1028o"]
size = Vector2(53, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvrnn"]
size = Vector2(9, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ugyg"]
size = Vector2(8.5, 39.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycw7d"]
size = Vector2(56, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jqaf"]
size = Vector2(70, 72)

[node name="TesteArrasto" type="Node2D"]

[node name="AreaEscova" type="Area2D" parent="."]
z_index = 4
position = Vector2(170, 95)
script = ExtResource("1_k3obs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AreaEscova"]
z_index = 2
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vyknu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEscova"]
position = Vector2(-31.5, -2.5)
shape = SubResource("RectangleShape2D_bsf7n")

[node name="CerdasArea" type="Area2D" parent="AreaEscova"]
rotation = 1.5707964

[node name="CerdasColision" type="CollisionShape2D" parent="AreaEscova/CerdasArea"]
position = Vector2(-9.000007, -99)
shape = SubResource("CapsuleShape2D_lc2av")

[node name="Bolhas" type="CPUParticles2D" parent="AreaEscova/CerdasArea/CerdasColision"]
z_index = 2
position = Vector2(-1.0000029, 3)
emitting = false
amount = 18
texture = ExtResource("3_1028o")
lifetime = 0.35000000000000003
preprocess = 0.5
emission_shape = 3
emission_rect_extents = Vector2(20, 20)
gravity = Vector2(0, 0)
scale_amount_min = 0.05
scale_amount_max = 0.1

[node name="denteArea" type="Area2D" parent="."]
z_index = -2
position = Vector2(270, 175)
script = ExtResource("4_okfr5")

[node name="denteSprite" type="AnimatedSprite2D" parent="denteArea"]
z_index = -1
z_as_relative = false
position = Vector2(33.000004, 82)
sprite_frames = SubResource("SpriteFrames_7ugyg")
animation = &"triste"

[node name="DenteColisorCima" type="Area2D" parent="denteArea"]

[node name="CollisionShapeCima" type="CollisionShape2D" parent="denteArea/DenteColisorCima"]
z_index = -1
z_as_relative = false
position = Vector2(33.5, 50)
shape = SubResource("RectangleShape2D_1028o")

[node name="DenteColisorEsquerda" type="Area2D" parent="denteArea"]

[node name="CollisionShapeEsquerda" type="CollisionShape2D" parent="denteArea/DenteColisorEsquerda"]
z_index = -1
z_as_relative = false
position = Vector2(2.5, 73)
shape = SubResource("RectangleShape2D_uvrnn")
disabled = true

[node name="DenteColisorDireita" type="Area2D" parent="denteArea"]

[node name="CollisionShapeDireita" type="CollisionShape2D" parent="denteArea/DenteColisorDireita"]
z_index = -1
z_as_relative = false
position = Vector2(64.75, 73.25)
shape = SubResource("RectangleShape2D_7ugyg")
disabled = true

[node name="DenteColisorBaixo" type="Area2D" parent="denteArea"]

[node name="CollisionShapeBaixo" type="CollisionShape2D" parent="denteArea/DenteColisorBaixo"]
z_index = -1
z_as_relative = false
position = Vector2(33, 95)
shape = SubResource("RectangleShape2D_ycw7d")

[node name="CollisionShapeArea" type="CollisionShape2D" parent="denteArea"]
z_index = -1
z_as_relative = false
position = Vector2(33, 82)
shape = SubResource("RectangleShape2D_8jqaf")

[node name="Timer" type="Timer" parent="denteArea"]
wait_time = 5.0
autostart = true

[connection signal="area_shape_entered" from="AreaEscova/CerdasArea" to="AreaEscova" method="_on_cerdas_area_area_shape_entered"]
[connection signal="area_shape_exited" from="AreaEscova/CerdasArea" to="AreaEscova" method="_on_cerdas_area_area_shape_exited"]
[connection signal="area_shape_entered" from="denteArea" to="AreaEscova" method="_on_dente_area_area_shape_entered"]
[connection signal="area_shape_entered" from="denteArea" to="denteArea" method="_on_area_shape_entered"]
[connection signal="area_shape_entered" from="denteArea/DenteColisorCima" to="denteArea" method="_on_dente_colisor_cima_area_shape_entered"]
[connection signal="area_shape_entered" from="denteArea/DenteColisorEsquerda" to="denteArea" method="_on_dente_colisor_esquerda_area_shape_entered"]
[connection signal="area_shape_entered" from="denteArea/DenteColisorDireita" to="denteArea" method="_on_dente_colisor_direita_area_shape_entered"]
[connection signal="area_shape_entered" from="denteArea/DenteColisorBaixo" to="denteArea" method="_on_dente_colisor_baixo_2_area_shape_entered"]
[connection signal="timeout" from="denteArea/Timer" to="denteArea" method="_on_timer_timeout"]
